--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.28.1",
     "@vitest/coverage-istanbul": "^0.28.1",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "jsdom": "^21.1.0",
