--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "preview": "vite preview",
-    "deploy:firebase": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
@@ -44,6 +44,7 @@
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "jsdom": "^21.1.0",
+    "postcss": "^8.4.21",
     "react-test-renderer": "^18.2.0",
     "redux-mock-store": "^1.5.4",
     "sass": "^1.57.1",
