--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vite preview --port 3000",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "preview": "vite preview",
