--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "preview": "vite preview",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "vite build && firebase deploy"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
